######################################################################
# Makefile.am                                              August 2001
# * Copyright (C) 2005, Infrant Technologies, Inc.        
# * All rights reserved 
######################################################################

bin_PROGRAMS = raidard      

raidard_SOURCES =\
        checksum.c              checksum.h \
        raidard.h \
        raidard_serve.c \
        interface.c             interface.h \
        interfaces.c            interfaces.h \
        packet.c                packet.h \
        util.c                  util.h

EXTRA_DIST=autogen.sh
