dnl
dnl Configure.in file for the raidtools
dnl
AC_INIT(mkraid.c)
AC_CONFIG_HEADER(config.h)

VERS=0.90
AC_SUBST(VERS)

dnl
dnl doesnt hurt
dnl
MAKEFLAGS="-j4"
AC_SUBST(MAKEFLAGS)

dnl
dnl Basic autoconf checking
dnl
AC_PROG_CC
AC_PROG_CPP

dnl
dnl Provide useful optimizations if they do not provide it
dnl
if test "x$CFLAGS" = x; then
    CFLAGS="-O2 -Wstrict-prototypes"
fi
AC_SUBST(CFLAGS)

dnl
dnl Provide sensible defaults if the users are not relocating the package
dnl
if test $prefix = NONE; then
    prefix=/usr
fi
AC_SUBST(prefix)


dnl
dnl Output Makefile
dnl
AC_OUTPUT(Makefile)
