sbin_PROGRAMS=noflushd
noflushd_SOURCES=disk_info.c disk_stat.c kupdate.c noflushd.c pidfile.c \
                 spindown.c state.c timeout.c util.c part_info.h part_info.c \
		 intr_stat.c \
		 bug.h diskhelper.h disk_info.h disk_stat.h kupdate.h \
                 noflushd.h pidfile.h spindown.h state.h timeout.h util.h \
		 intr_stat.h

